# deep_trading

./: .gitignore  README.md  pyproject.toml  test.ipynb  test1.ipynb  test_download.py  testing1.ipynb
functions/: download_data.py
