[tool.poetry]
name = "deep-trading"
version = "0.1.0"
description = "Herramientas para análisis y trading algorítmico"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "2.0.0"
yfinance = "^0.2.18"
ta-lib = {version = "^0.4.26", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
talib = ["ta-lib"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
